# SCANS-abstract_image_task

./: .gitignore  README.md  answer_files.py  main.py  preprocessing.ipynb  pyproject.toml
Data/: __abstract-images.csv  __responses.csv
Data/test/: test_test_responses.csv
