[project]
name = "scans-abstract_images_task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dukpy>=0.5.0",
    "psychopy>=2025.1.1",
    "pylsl>=1.17.6",
    "pytz>=2025.2",
]
[tool.uv]
override-dependencies = [
  "pyobjc>=12.1; sys_platform == 'darwin'",
  "pyobjc-framework-coremidi>=12.1; sys_platform == 'darwin'",
  "pyobjc-framework-quartz>=12.1; sys_platform == 'darwin'",
]

